--- a/politicsAndPrivacid.html
+++ b/politicsAndPrivacid.html
@@ -199,7 +199,7 @@
                                <li ><a class="text-nowrap" href="product.html">Beneficios Exclusivos</a></li >
                                 <li><a href="testimonials.html">Testimonios</a>
                                  
-                                <li><a href="contact.html">Contactanos</a></li>
+                                <li><a href="contact.html">Contáctanos</a></li>
                             </ul>
                         </div>
                     </div>
@@ -368,7 +368,7 @@
                                     <li><a href="testimonials.html">Testimonios</a></li>
                                     <li><a href="about-us.html">Conocenos</a></li>
                                     <li><a href="product.html">Beneficios Exclusivos</a></li>
-                                    <li><a href="contact.html">Contactanos</a></li>
+                                    <li><a href="contact.html">Contáctanos</a></li>
                                     <li><a href="terms.html">Terminos y condiciones</a></li>
                                     <li><a href="politicsAndPrivacid.html">Politicas de privacidad</a></li>
                                        
