--- a/testimonials.html
+++ b/testimonials.html
@@ -112,7 +112,7 @@
                                 <li><a href="about-us.html">Conocenos</a></li>
                                 <li><a class="text-nowrap" href="product.html">Beneficios Exclusivos</a></li>
                                 <li><a href="testimonials.html">Testimonios</a>
-                                <li><a href="contact.html">Contactanos</a></li>
+                                <li><a href="contact.html">Contáctanos</a></li>
                             </ul>
                         </div>
                     </div>
@@ -201,9 +201,9 @@
                             <div class="testimonial-card p-4 position-relative h-100">
                                 <i class="fa fa-quote-right quote-icon"></i>
                                 <div class="text-center mb-4">
-                                    <img src="assets/images/perfil.jpg" style="object-fit: cover;" alt="Carlos Ruiz" class="testimonial-avatar mb-3">
-                                    <h5 class="mb-1">Carlos Ruiz</h5>
-                                    <p class="text-muted small mb-3">Lipoescultura</p>
+                                    <img src="assets/images/testimonials/unnamed.jpg" style="object-fit: cover;" alt="Emily Torres" class="testimonial-avatar mb-3">
+                                    <h5 class="mb-1">Emily Torres</h5>
+                                    <p class="text-muted small mb-3">Aumento Mamario</p>
                                     <div class="testimonial-rating mb-3">
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
@@ -212,7 +212,7 @@
                                         <i class="fa fa-star"></i>
                                     </div>
                                 </div>
-                                <p class="text-muted">"Excelente atención y resultados increíbles. El proceso fue muy profesional desde el inicio hasta el final."</p>
+                                <p class="text-muted">"Gracias a mi suscripción y a los beneficios premium de BELLA, pude acceder a los mejores doctores y encontrar al especialista ideal para mi procedimiento. Me realicé un aumento mamario que superó mis expectativas y mejoró mi autoestima. Desde el inicio de mi suscripción hasta el trato con el doctor, todo fue excepcional. Si estás buscando la mejor experiencia para tu bienestar, te recomiendo esta aplicación. ¡Te sentirás segura, cómoda y en las mejores manos!"</p>
                             </div>
                         </div>
 
@@ -221,9 +221,9 @@
                             <div class="testimonial-card p-4 position-relative h-100">
                                 <i class="fa fa-quote-right quote-icon"></i>
                                 <div class="text-center mb-4">
-                                    <img src="assets/images/perfil.jpg" style="object-fit: cover;" alt="María López" class="testimonial-avatar mb-3">
-                                    <h5 class="mb-1">María López</h5>
-                                    <p class="text-muted small mb-3">Aumento de Senos</p>
+                                    <img src="assets/images/testimonials/unnamed (5).jpg" style="object-fit: cover;" alt="Carlos Campos" class="testimonial-avatar mb-3">
+                                    <h5 class="mb-1">Carlos Campos</h5>
+                                    <p class="text-muted small mb-3">Botox</p>
                                     <div class="testimonial-rating mb-3">
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
@@ -232,7 +232,7 @@
                                         <i class="fa fa-star"></i>
                                     </div>
                                 </div>
-                                <p class="text-muted">"Me encantó el trato personalizado y la atención a los detalles. Los resultados son naturales y hermosos."</p>
+                                <p class="text-muted">"Siempre había querido mejorar mi apariencia de forma natural y segura. Con mi suscripción premium de la BELLA, pude encontrar un especialista en bótox de primer nivel. Desde la elección del doctor hasta el procedimiento, todo fue fácil y profesional. El resultado superó mis expectativas, logrando un look renovado sin perder mi expresión natural. Definitivamente, esta aplicación es la mejor opción para quienes buscan confianza y calidad en sus tratamientos"</p>
                             </div>
                         </div>
 
@@ -241,18 +241,18 @@
                             <div class="testimonial-card p-4 position-relative h-100">
                                 <i class="fa fa-quote-right quote-icon"></i>
                                 <div class="text-center mb-4">
-                                    <img src="assets/images/perfil.jpg" style="object-fit: cover;" alt="Roberto Sánchez" class="testimonial-avatar mb-3">
-                                    <h5 class="mb-1">Roberto Sánchez</h5>
-                                    <p class="text-muted small mb-3">Cirugía de Párpados</p>
+                                    <img src="assets/images/testimonials/unnamed (1).jpg" style="object-fit: cover;" alt="Alina Vargas" class="testimonial-avatar mb-3">
+                                    <h5 class="mb-1">Alina Vargas</h5>
+                                    <p class="text-muted small mb-3">Aumento de Glúteos</p>
                                     <div class="testimonial-rating mb-3">
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
-                                        <i class="fa fa-star-half-o"></i>
+                                        <i class="fa fa-star"></i>
                                     </div>
                                 </div>
-                                <p class="text-muted">"Muy satisfecho con los resultados. El proceso de recuperación fue exactamente como me lo explicaron."</p>
+                                <p class="text-muted">"Tomar la decisión de hacerme un aumento de glúteos fue un gran paso, y gracias a esta aplicación lo hice con total seguridad. Mi suscripción en BELLA me permitió acceder a los mejores especialistas, y encontré un cirujano que entendió perfectamente lo que quería. El proceso fue impecable, el trato inmejorable y el resultado simplemente espectacular. Me siento más segura y feliz con mi cuerpo. Si estás pensando en un cambio, esta es la mejor opción."</p>
                             </div>
                         </div>
 
@@ -261,8 +261,28 @@
                             <div class="testimonial-card p-4 position-relative h-100">
                                 <i class="fa fa-quote-right quote-icon"></i>
                                 <div class="text-center mb-4">
-                                    <img src="assets/images/perfil.jpg" style="object-fit: cover;" alt="Laura Martínez" class="testimonial-avatar mb-3">
-                                    <h5 class="mb-1">Laura Martínez</h5>
+                                    <img src="assets/images/testimonials/unnamed (2).jpg" style="object-fit: cover;" alt="Ana Vargas" class="testimonial-avatar mb-3">
+                                    <h5 class="mb-1">Ana Vargas</h5>
+                                    <p class="text-muted small mb-3">Retiro de Biopolímeros</p>
+                                    <div class="testimonial-rating mb-3">
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                    </div>
+                                </div>
+                                <p class="text-muted">"Retirar los biopolímeros fue una decisión crucial para mi salud, y gracias a mi suscripción en BELLA, encontré a los mejores especialistas. Su experiencia y profesionalismo me dieron total confianza desde el primer momento. Hoy me siento más saludable y segura. Sin duda, la mejor opción para quienes buscan atención de calidad"</p>
+                            </div>
+                        </div>
+
+                        <!-- Testimonio 5 -->
+                        <div class="col-md-6 col-lg-4">
+                            <div class="testimonial-card p-4 position-relative h-100">
+                                <i class="fa fa-quote-right quote-icon"></i>
+                                <div class="text-center mb-4">
+                                    <img src="assets/images/testimonials/unnamed (3).jpg" style="object-fit: cover;" alt="Alejandro Bermudez" class="testimonial-avatar mb-3">
+                                    <h5 class="mb-1">Alejandro Bermudez</h5>
                                     <p class="text-muted small mb-3">Abdominoplastia</p>
                                     <div class="testimonial-rating mb-3">
                                         <i class="fa fa-star"></i>
@@ -272,17 +292,17 @@
                                         <i class="fa fa-star"></i>
                                     </div>
                                 </div>
-                                <p class="text-muted">"Los resultados cambiaron mi vida. El equipo médico fue increíblemente profesional y atento."</p>
+                                <p class="text-muted">"Decidí realizarme una abdominoplastia y, gracias a mi suscripción en BELLA, encontré al especialista perfecto. Su experiencia y dedicación me dieron mucha confianza durante todo el proceso. El resultado fue más allá de lo que esperaba. Me siento mucho mejor y más seguro con mi apariencia. Recomiendo totalmente esta aplicación para quienes buscan los mejores profesionales"</p>
                             </div>
                         </div>
 
-                        <!-- Testimonio 5 -->
+                        <!-- Testimonio 6 -->
                         <div class="col-md-6 col-lg-4">
                             <div class="testimonial-card p-4 position-relative h-100">
                                 <i class="fa fa-quote-right quote-icon"></i>
                                 <div class="text-center mb-4">
-                                    <img src="assets/images/perfil.jpg" style="object-fit: cover;" alt="Daniel Torres" class="testimonial-avatar mb-3">
-                                    <h5 class="mb-1">Daniel Torres</h5>
+                                    <img src="assets/images/testimonials/unnamed (4).jpg" style="object-fit: cover;" alt="Tammy Andrade" class="testimonial-avatar mb-3">
+                                    <h5 class="mb-1">Tammy Andrade</h5>
                                     <p class="text-muted small mb-3">Rinoplastia</p>
                                     <div class="testimonial-rating mb-3">
                                         <i class="fa fa-star"></i>
@@ -292,27 +312,7 @@
                                         <i class="fa fa-star"></i>
                                     </div>
                                 </div>
-                                <p class="text-muted">"Excelente experiencia desde la primera consulta. Los resultados superaron mis expectativas."</p>
-                            </div>
-                        </div>
-
-                        <!-- Testimonio 6 -->
-                        <div class="col-md-6 col-lg-4">
-                            <div class="testimonial-card p-4 position-relative h-100">
-                                <i class="fa fa-quote-right quote-icon"></i>
-                                <div class="text-center mb-4">
-                                    <img src="assets/images/perfil.jpg" style="object-fit: cover;" alt="Carmen Rodríguez" class="testimonial-avatar mb-3">
-                                    <h5 class="mb-1">Carmen Rodríguez</h5>
-                                    <p class="text-muted small mb-3">Lifting Facial</p>
-                                    <div class="testimonial-rating mb-3">
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                        <i class="fa fa-star"></i>
-                                    </div>
-                                </div>
-                                <p class="text-muted">"Me siento rejuvenecida y natural. El seguimiento post-operatorio fue excepcional."</p>
+                                <p class="text-muted">"Mi experiencia con la rinoplastia fue increíble, y todo gracias a la app. Encontré al cirujano ideal, quien me brindó un trato cercano y profesional. El procedimiento superó mis expectativas, y ahora me siento más segura y feliz con mi rostro. Recomiendo a BELLA a quienes busquen un especialista confiable y de calidad"</p>
                             </div>
                         </div>
                     </div>
@@ -435,7 +435,7 @@
                                     <li><a href="testimonials.html">Testimonios</a></li>
                                     <li><a href="about-us.html">Conocenos</a></li>
                                     <li><a href="product.html">Beneficios Exclusivos</a></li>
-                                    <li><a href="contact.html">Contactanos</a></li>
+                                    <li><a href="contact.html">Contáctanos</a></li>
                                     <li><a href="terms.html">Terminos y condiciones</a></li>
                                     <li><a href="politicsAndPrivacid.html">Politicas de privacidad</a></li>
                                        
