--- a/index.html,about-us.html,product.html,testimonials.html,contact.html
+++ b/index.html,about-us.html,product.html,testimonials.html,contact.html
@@ -16,7 +16,7 @@
                                 <li><a href="about-us.html">Conocenos</a></li>
                                 <li><a class="text-nowrap" href="product.html">Beneficios Exclusivos</a></li>
                                 <li><a href="testimonials.html">Testimonios</a></li>
-                                <li><a href="contact.html">Contactanos</a></li>
+                                <li><a href="contact.html">Contáctanos</a></li>
                             </ul>
                         </div>
                     </div>
