--- a/testimonials.html
+++ b/testimonials.html
@@ -37,7 +37,7 @@
 
     <style>
         :root {
-            --theme-color: #B2B2B2;
+            --theme-color: #27222C;
             --theme-light: rgba(159, 200, 204, 0.1);
             --theme-medium: rgba(159, 200, 204, 0.5);
             --theme-dark: #8AB5B9;
@@ -101,7 +101,7 @@
                     <div class="col-5 col-sm-4 col-lg-1">
                         <div class="header-logo">
                             <a href="index.html">
-                                <img class="logo-main" src="assets/images/logo.png" width="95" height="68" alt="Logo" />
+                                <img class="logo-main" src="assets/images/logo.png" width="150" height="130" alt="Logo" />
                             </a>
                         </div>
                     </div>
@@ -139,26 +139,6 @@
 
         <main class="main-content">
 
-            <!--== Start Page Header Area Wrapper ==-->
-            <div class="page-header-area">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-12 text-center">
-                            <div class="page-header-content">
-                                <h2 class="title">Testimonios</h2>
-                                <nav class="breadcrumb-area">
-                                    <ul class="breadcrumb">
-                                        <li><a href="index.html">Inicio</a></li>
-                                        <li class="breadcrumb-sep">/</li>
-                                        <li>Testimonios</li>
-                                    </ul>
-                                </nav>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!--== End Page Header Area Wrapper ==-->
 
             <!--== Start Testimonials Section ==-->
             <section class="section-space bg-light">
@@ -176,7 +156,7 @@
                                 <div class="row align-items-center">
                                     <div class="col-md-3 text-center">
                                         <img src="assets/images/perfil.jpg" style="object-fit: cover;" alt="Ana García" class="testimonial-avatar mb-3">
-                                        <h4 class="mb-1">Ana García</h4>
+                                        <h4 class="mb-1 text-white">Ana García</h4>
                                         <p class="mb-3">Rinoplastia</p>
                                         <div class="testimonial-rating">
                                             <i class="fa fa-star"></i>
@@ -373,7 +353,7 @@
                             </div>
 
                             <p class="mt-4 text-muted small">
-                                <i class="fa fa-shield" style="color: #B2B2B2;"></i> 
+                                <i class="fa fa-shield" style="color: #27222C;"></i> 
                                 Descarga segura y gratuita
                             </p>
                         </div>
@@ -386,7 +366,7 @@
             <!--== Start Newsletter Section ==-->
             <section class="section-space">
                 <div class="container">
-                    <div class="newsletter-content-wrap bg-dark rounded-4 p-5" style="background-color: #B2B2B2 !important;">
+                    <div class="newsletter-content-wrap bg-dark rounded-4 p-5" style="background-color: #27222C !important;">
                         <div class="row align-items-center">
                             <div class="col-lg-6 mb-4 mb-lg-0">
                                 <div class="newsletter-content">
@@ -400,7 +380,7 @@
                                 <div class="newsletter-form">
                                     <form class="d-flex gap-3">
                                         <input type="email" class="form-control form-control-lg border-0" placeholder="Ingresa tu correo electrónico">
-                                        <button class="btn btn-light btn-lg" type="submit" style="background-color: white; color: #B2B2B2;">Suscribirse</button>
+                                        <button class="btn btn-light btn-lg" type="submit" style="background-color: white; color: #27222C;">Suscribirse</button>
                                     </form>
                                 </div>
                             </div>
@@ -422,7 +402,7 @@
                             <div class="widget-item">
                                 <div class="widget-about">
                                     <a class="widget-logo" href="index.html">
-                                        <img src="assets/images/logo.png" width="95" height="68" alt="Logo">
+                                        <img src="assets/images/logo.png" width="96" height="69" alt="Logo">
                                     </a>
                                     <p class="desc">Bella conecta a pacientes con los mejores cirujanos plásticos certificados, ofreciendo descuentos exclusivos y garantizando la más alta calidad en procedimientos estéticos.</p>
                                 </div>
