--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 
     <style>
         :root {
-            --theme-color: #B2B2B2;
+            --theme-color: #27222C;
             --theme-light: rgba(159, 200, 204, 0.1);
             --theme-medium: rgba(159, 200, 204, 0.5);
             --theme-dark: #8AB5B9;
@@ -154,7 +154,7 @@
                     <div class="col-5 col-sm-4 col-lg-1">
                         <div class="header-logo">
                             <a href="index.html">
-                                <img class="logo-main" src="assets/images/logo.png" width="95" height="68" alt="Logo" />
+                                <img class="logo-main" src="assets/images/logo.png" width="150" height="130" alt="Logo" />
                             </a>
                         </div>
                     </div>
@@ -193,26 +193,7 @@
 
         <main class="main-content">
 
-            <!--== Start Page Header ==-->
-            <div class="page-header-area">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-12 text-center">
-                            <div class="page-header-content">
-                                <h2 class="title">Contacto</h2>
-                                <nav class="breadcrumb-area">
-                                    <ul class="breadcrumb">
-                                        <li><a href="index.html">Inicio</a></li>
-                                        <li class="breadcrumb-sep">/</li>
-                                        <li>Contacto</li>
-                                    </ul>
-                                </nav>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!--== End Page Header ==-->
+
 
             <!--== Start Contact Section ==-->
             <section class="section-space">
@@ -356,7 +337,7 @@
             <!--== Start Newsletter Section ==-->
             <section class="section-space">
                 <div class="container">
-                    <div class="newsletter-content-wrap bg-dark rounded-4 p-5" style="background-color: #B2B2B2 !important;">
+                    <div class="newsletter-content-wrap bg-dark rounded-4 p-5" style="background-color: #27222C !important;">
                         <div class="row align-items-center">
                             <div class="col-lg-6 mb-4 mb-lg-0">
                                 <div class="newsletter-content">
@@ -370,7 +351,7 @@
                                 <div class="newsletter-form">
                                     <form class="d-flex gap-3">
                                         <input type="email" class="form-control form-control-lg border-0" placeholder="Ingresa tu correo electrónico">
-                                        <button class="btn btn-light btn-lg" type="submit" style="background-color: white; color: #B2B2B2;">Suscribirse</button>
+                                        <button class="btn btn-light btn-lg" type="submit" style="background-color: white; color: #27222C;">Suscribirse</button>
                                     </form>
                                 </div>
                             </div>
@@ -393,7 +374,7 @@
                             <div class="widget-item">
                                 <div class="widget-about">
                                     <a class="widget-logo" href="index.html">
-                                        <img src="assets/images/logo.png" width="95" height="68" alt="Logo">
+                                        <img src="assets/images/logo.png" width="96" height="69" alt="Logo">
                                     </a>
                                     <p class="desc">Bella conecta a pacientes con los mejores cirujanos plásticos certificados, ofreciendo descuentos exclusivos y garantizando la más alta calidad en procedimientos estéticos.</p>
                                 </div>
