--- a/terms.html
+++ b/terms.html
@@ -34,7 +34,7 @@
 
     <style>
         :root {
-            --theme-color: #B2B2B2;
+            --theme-color: #27222C;
             --theme-light: rgba(159, 200, 204, 0.1);
             --theme-medium: rgba(159, 200, 204, 0.5);
             --theme-dark: #8AB5B9;
@@ -203,26 +203,7 @@
 
         <main class="main-content">
 
-            <!--== Start Page Header Area Wrapper ==-->
-            <div class="page-header-area">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-12 text-center">
-                            <div class="page-header-content">
-                                <h2 class="title">Términos y Condiciones</h2>
-                                <nav class="breadcrumb-area">
-                                    <ul class="breadcrumb">
-                                        <li><a href="index.html">Inicio</a></li>
-                                        <li class="breadcrumb-sep">/</li>
-                                        <li>Términos y Condiciones</li>
-                                    </ul>
-                                </nav>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!--== End Page Header Area Wrapper ==-->
+
 
             <!--== Start Terms Content ==-->
             <section class="section-space">
@@ -333,7 +314,7 @@
                             <div class="widget-item">
                                 <div class="widget-about">
                                     <a class="widget-logo" href="index.html">
-                                        <img src="assets/images/logo.png" width="95" height="68" alt="Logo">
+                                        <img src="assets/images/logo.png" width="150" height="130" alt="Logo">
                                     </a>
                                     <p class="desc">Bella conecta a pacientes con los mejores cirujanos plásticos certificados, ofreciendo descuentos exclusivos y garantizando la más alta calidad en procedimientos estéticos.</p>
                                 </div>
