--- a/index.html
+++ b/index.html
@@ -202,34 +202,33 @@
         <!--== Start Header Wrapper ==-->
         <header class="header-area sticky-header header-transparent">
             <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-5 col-lg-2 col-xl-2 p-0 ps-2">
+                <div class="row align-items-center justify-content-between">
+                    <div class="col-5 col-lg-3 col-xl-3 p-0 ps-2">
                         <div class="header-logo">
                             <a href="index.html">
-                                <img class="logo-main" src="assets/images/logo.png" width="150" height="130" alt="Logo" />
+                                <img class="logo-main" src="assets/images/logo.png" width="220" height="191" alt="Logo" />
                             </a>
                         </div>
                     </div>
-                    <div class="col-lg-7 col-xl-6 d-none d-lg-block">
-                        <div class="header-navigation ps-7">
+                    <div class="col-lg-5 col-xl-5" style="display: none;">
+                        <div class="header-navigation">
                             <ul class="main-nav justify-content-start">
-                                <li><a href="index.html">Inicio</a></li>
-
                                 <li><a href="about-us.html">Conocenos</a></li>
                                 <li><a class="text-nowrap" href="product.html">Beneficios Exclusivos</a></li>
-                                <li><a href="testimonials.html">Testimonios</a>
-
+                                <li><a href="testimonials.html">Testimonios</a></li>
                                 <li><a href="contact.html">Contáctanos</a></li>
                             </ul>
                         </div>
                     </div>
-                    <div class="col-7 col-lg-3 col-xl-4">
+                    <div class="col-7 col-lg-4 col-xl-4">
                         <div class="header-action justify-content-end">
                             <div class="d-flex flex-nowrap">
-                                <a class="m-1" href="www.apple.com/store" target="_blank"><img width="114"
-                                        src="assets/images/icons/appstore.svg" alt=""></a>
-                                <a class="m-1" href="https://play.google.com/store" target="_blank"><img width="130"
-                                        src="assets/images/icons/playstore.png" alt=""></a>
+                                <div class="download-button">
+                                    <button onclick="detectAndRedirect()" class="btn btn-dark px-3">
+                                        <i class="fa fa-download"></i>
+                                        Descargar
+                                    </button>
+                                </div>
                             </div>
                             <button class="header-menu-btn" type="button" data-bs-toggle="offcanvas"
                                 data-bs-target="#AsideOffcanvasMenu" aria-controls="AsideOffcanvasMenu">
@@ -250,7 +249,7 @@
             <section class="hero-slider-area" style="background-color: #E6ECFF;">
                 <div class="swiper hero-slider-container">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide hero-slide-item" style="background-color: #E6ECFF; padding-bottom: 0;">
+                        <div class="swiper-slide hero-slide-item" style="background-color: #F5EEFE; padding-bottom: 0;">
                             <div class="container-fluid px-4">
                                 <div class="row align-items-center justify-content-center" style="min-height: 75vh;">
                                     <div class="col-12 col-md-6 order-2 order-md-1">
@@ -267,29 +266,6 @@
                                                 </button>
                                             </div>
 
-                                            <script>
-                                                function detectAndRedirect() {
-                                                    // Detectar sistema operativo
-                                                    var userAgent = navigator.userAgent || navigator.vendor || window.opera;
-                                                    
-                                                    // iOS detection
-                                                    if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
-                                                        window.location.href = "https://apps.apple.com/app/bella-app";
-                                                    }
-                                                    // macOS detection
-                                                    else if (navigator.platform.toUpperCase().indexOf('MAC') >= 0) {
-                                                        window.location.href = "https://apps.apple.com/app/bella-app";
-                                                    }
-                                                    // Android detection
-                                                    else if (/android/i.test(userAgent)) {
-                                                        window.location.href = "https://play.google.com/store/apps/details?id=com.bella.app";
-                                                    }
-                                                    // Windows/otros (default a Google Play)
-                                                    else {
-                                                        window.location.href = "https://play.google.com/store/apps/details?id=com.bella.app";
-                                                    }
-                                                }
-                                            </script>
                                         </div>
                                     </div>
                                     <div class="col-12 col-md-6 order-1 order-md-2">
@@ -301,24 +277,24 @@
                             </div>
                         </div>
                         <div class="swiper-slide hero-slide-item" style="background-color: #E6ECFF; padding-bottom: 0;">
-                            <div class="container-lg">
+                            <div class="container-fluid px-0">
                                 <div class="row align-items-center position-relative" style="min-height: 75vh;">
                                     <div class="col-12 col-md-6 order-1 order-md-2">
-                                        <div class="hero-slide-thumb" style="margin-bottom: -2px;">
-                                            <img style="border-radius: 4% 4% 0 0; display: block; width: 100%; height: 600px; object-fit: cover;" 
-                                                 src="assets/images/vertical.jpg" alt="Image">
+                                        <div class="hero-slide-thumb">
+                                            <img src="assets/images/vertical.jpg" alt="Image" 
+                                                 style="margin: auto; border-radius: 4% 4% 0 0; width: auto; max-height: 80vh; object-fit: contain;">
                                         </div>
                                     </div>
                                     <div class="col-12 col-md-6 order-2 order-md-1">
-                                        <div class="hero-slide-content" style="padding-bottom: 2rem;">
+                                        <div class="hero-slide-content">
                                             <h2 class="hero-slide-title">Resultados Naturales</h2>
-                                            <p class="hero-slide-desc">Confía en los mejores cirujanos plásticos
-                                                certificados internacionalmente para lograr la mejor versión de ti.</p>
-                                            <a class="btn btn-border-dark" href="product.html"
-                                                style="border-color: #27222C; color: #27222C; transition: all 0.3s ease;"
-                                                onmouseover="this.style.backgroundColor='#27222C'; this.style.color='white';"
-                                                onmouseout="this.style.backgroundColor='transparent'; this.style.color='#27222C';">Ver
-                                                Beneficios</a>
+                                            <p class="hero-slide-desc">Nuestros especialistas certificados te ayudarán a lograr los resultados que deseas de manera segura y natural.</p>
+                                            <div class="download-button">
+                                                <button onclick="detectAndRedirect()" class="btn btn-dark">
+                                                    <i class="fa fa-download"></i>
+                                                    Descargar App
+                                                </button>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -432,7 +408,7 @@
                     <div class="row">
                         <div class="col-md-4 mb-7">
                             <div class="service-item text-center">
-                                <img src="assets/images/Fotos-Website-prueba/pexels-shvetsa-4586711.jpg" alt="Cirugía Facial" class="rounded-4 mb-4">
+                                <img src="assets/images/Fotos-Website-prueba/pexels-cottonbro-7583376.jpg" alt="Cirugía Facial" class="rounded-4 mb-4">
                                 <h4>Cirugía Facial</h4>
                                 <p>Especialistas en rinoplastia, lifting facial, mentoplastia y procedimientos para
                                     rejuvenecimiento facial.</p>
@@ -440,7 +416,7 @@
                         </div>
                         <div class="col-md-4 mb-7">
                             <div class="service-item text-center">
-                                <img src="assets/images/Fotos-Website-prueba/pexels-cottonbro-7583377.jpg" alt="Cirugía Corporal" class="rounded-4 mb-4">
+                                <img src="assets/images/Fotos-Website-prueba/Consultorio.jpg" alt="Cirugía Corporal" class="rounded-4 mb-4">
                                 <h4>Cirugía Corporal</h4>
                                 <p>Expertos en lipoescultura, abdominoplastia, aumento de glúteos y contorno corporal.
                                 </p>
@@ -448,7 +424,7 @@
                         </div>
                         <div class="col-md-4 mb-7">
                             <div class="service-item text-center">
-                                <img src="assets/images/Fotos-Website-prueba/pexels-shvetsa-4586732.jpg" alt="Cirugía Mamaria" class="rounded-4 mb-4">
+                                <img src="assets/images/Fotos-Website-prueba/pexels-shvetsa-5069609 (1).jpg" alt="Cirugía Mamaria" class="rounded-4 mb-4">
                                 <h4>Cirugía Mamaria</h4>
                                 <p>Especialistas en aumento, reducción y levantamiento de senos con resultados
                                     naturales.</p>
@@ -465,7 +441,7 @@
                         </div>
                         <div class="col-md-4 mb-7">
                             <div class="service-item text-center">
-                                <img src="assets/images/Fotos-Website-prueba/pexels-shvetsa-4586732.jpg" alt="Procedimientos No Quirúrgicos"
+                                <img src="assets/images/Fotos-Website-prueba/pexels-shvetsa-4586711.jpg" alt="Procedimientos No Quirúrgicos"
                                     class="rounded-4 mb-4">
                                 <h4>Medicina Estética</h4>
                                 <p>Especialistas en tratamientos mínimamente invasivos, rellenos y rejuvenecimiento.</p>
@@ -473,7 +449,7 @@
                         </div>
                         <div class="col-md-4 mb-7">
                             <div class="service-item text-center">
-                                <img src="assets/images/Fotos-Website-prueba/pexels-pavel-danilyuk-6417942.jpg" alt="Más Especialidades" class="rounded-4 mb-4">
+                                <img src="assets/images/Fotos-Website-prueba/pexels-ganinph-7772686.jpg" alt="Más Especialidades" class="rounded-4 mb-4">
                                 <h4>Otras Especialidades</h4>
                                 <p>Descubre más especialistas certificados en diversos procedimientos estéticos y muchas
                                     otras áreas de la cirugía plástica y estética.</p>
@@ -583,7 +559,7 @@
                             </div>
                             <div class="col-lg-6">
                                 <div class="newsletter-form">
-                                    <form class="d-flex gap-3">
+                                    <form class="d-flex gap-3 flex-wrap">
                                         <input type="email" class="form-control form-control-lg border-0"
                                             placeholder="Ingresa tu correo electrónico">
                                         <button class="btn btn-light btn-lg" type="submit"
