--- a/product.html
+++ b/product.html
@@ -266,37 +266,36 @@
     <!--== Wrapper Start ==-->
     <div class="wrapper">
 
-
         <!--== Start Header Wrapper ==-->
         <header class="header-area sticky-header header-transparent">
             <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-5 col-lg-2 col-xl-1 p-0 ps-2">
+                <div class="row align-items-center justify-content-between">
+                    <div class="col-5 col-lg-3 col-xl-3 p-0 ps-2">
                         <div class="header-logo">
                             <a href="index.html">
-                                <img class="logo-main" src="assets/images/logo.png" width="95" height="68"
-                                    alt="Logo" />
+                                <img class="logo-main" src="assets/images/logo.png" width="220" height="191" alt="Logo" />
                             </a>
                         </div>
                     </div>
-                    <div class="col-lg-7 col-xl-7 d-none d-lg-block">
-                        <div class="header-navigation ps-7">
+                    <div class="col-lg-5 col-xl-5" style="display: none;">
+                        <div class="header-navigation">
                             <ul class="main-nav justify-content-start">
-                                                                 <li><a href="index.html">Inicio</a></li>
-
                                 <li><a href="about-us.html">Conocenos</a></li>
-                               <li ><a class="text-nowrap" href="product.html">Beneficios Exclusivos</a></li >
-                               <li><a href="testimonials.html">Testimonios</a>
-                                 
+                                <li><a class="text-nowrap" href="product.html">Beneficios Exclusivos</a></li>
+                                <li><a href="testimonials.html">Testimonios</a></li>
                                 <li><a href="contact.html">Contáctanos</a></li>
                             </ul>
                         </div>
                     </div>
-                    <div class="col-7 col-lg-3 col-xl-4">
+                    <div class="col-7 col-lg-4 col-xl-4">
                         <div class="header-action justify-content-end">
                             <div class="d-flex flex-nowrap">
-                            <a class="m-1" href="www.apple.com/store" target="_blank"><img width="114" src="assets/images/icons/appstore.svg" alt=""></a>
-                            <a class="m-1" href="https://play.google.com/store" target="_blank"><img width="130" src="assets/images/icons/playstore.png" alt=""></a>
+                                <div class="download-button">
+                                    <button onclick="detectAndRedirect()" class="btn btn-dark px-3">
+                                        <i class="fa fa-download"></i>
+                                        Descargar
+                                    </button>
+                                </div>
                             </div>
                             <button class="header-menu-btn" type="button" data-bs-toggle="offcanvas"
                                 data-bs-target="#AsideOffcanvasMenu" aria-controls="AsideOffcanvasMenu">
@@ -391,7 +390,6 @@
                 </div>
             </section>
             <!--== End Benefits Section ==-->
-
             <!--== Start Services Section ==-->
             <section class="section-space pt-0">
                 <div class="container">
@@ -406,7 +404,7 @@
                     <div class="row">
                         <div class="col-md-4 mb-7">
                             <div class="service-item text-center">
-                                <img src="assets/images/Fotos-Website-prueba/pexels-shvetsa-4586711.jpg" alt="Cirugía Facial" class="rounded-4 mb-4">
+                                <img src="assets/images/Fotos-Website-prueba/pexels-cottonbro-7583376.jpg" alt="Cirugía Facial" class="rounded-4 mb-4">
                                 <h4>Cirugía Facial</h4>
                                 <p>Especialistas en rinoplastia, lifting facial, mentoplastia y procedimientos para
                                     rejuvenecimiento facial.</p>
@@ -414,7 +412,7 @@
                         </div>
                         <div class="col-md-4 mb-7">
                             <div class="service-item text-center">
-                                <img src="assets/images/Fotos-Website-prueba/pexels-cottonbro-7583377.jpg" alt="Cirugía Corporal" class="rounded-4 mb-4">
+                                <img src="assets/images/Fotos-Website-prueba/Consultorio.jpg" alt="Cirugía Corporal" class="rounded-4 mb-4">
                                 <h4>Cirugía Corporal</h4>
                                 <p>Expertos en lipoescultura, abdominoplastia, aumento de glúteos y contorno corporal.
                                 </p>
@@ -422,7 +420,7 @@
                         </div>
                         <div class="col-md-4 mb-7">
                             <div class="service-item text-center">
-                                <img src="assets/images/Fotos-Website-prueba/pexels-shvetsa-4586732.jpg" alt="Cirugía Mamaria" class="rounded-4 mb-4">
+                                <img src="assets/images/Fotos-Website-prueba/pexels-shvetsa-5069609 (1).jpg" alt="Cirugía Mamaria" class="rounded-4 mb-4">
                                 <h4>Cirugía Mamaria</h4>
                                 <p>Especialistas en aumento, reducción y levantamiento de senos con resultados
                                     naturales.</p>
@@ -439,7 +437,7 @@
                         </div>
                         <div class="col-md-4 mb-7">
                             <div class="service-item text-center">
-                                <img src="assets/images/Fotos-Website-prueba/pexels-shvetsa-4586732.jpg" alt="Procedimientos No Quirúrgicos"
+                                <img src="assets/images/Fotos-Website-prueba/pexels-shvetsa-4586711.jpg" alt="Procedimientos No Quirúrgicos"
                                     class="rounded-4 mb-4">
                                 <h4>Medicina Estética</h4>
                                 <p>Especialistas en tratamientos mínimamente invasivos, rellenos y rejuvenecimiento.</p>
@@ -447,7 +445,7 @@
                         </div>
                         <div class="col-md-4 mb-7">
                             <div class="service-item text-center">
-                                <img src="assets/images/Fotos-Website-prueba/pexels-pavel-danilyuk-6417942.jpg" alt="Más Especialidades" class="rounded-4 mb-4">
+                                <img src="assets/images/Fotos-Website-prueba/pexels-ganinph-7772686.jpg" alt="Más Especialidades" class="rounded-4 mb-4">
                                 <h4>Otras Especialidades</h4>
                                 <p>Descubre más especialistas certificados en diversos procedimientos estéticos y muchas
                                     otras áreas de la cirugía plástica y estética.</p>
@@ -626,11 +624,11 @@
                 </div>
             </section>
             <!--== End Membership Section ==-->
-
             <!--== Start Newsletter Section ==-->
             <section class="section-space">
                 <div class="container">
-                    <div class="newsletter-content-wrap bg-dark rounded-4 p-5">
+                    <div class="newsletter-content-wrap bg-dark rounded-4 p-5"
+                        style="background-color: #27222C !important;">
                         <div class="row align-items-center">
                             <div class="col-lg-6 mb-4 mb-lg-0">
                                 <div class="newsletter-content">
@@ -643,10 +641,11 @@
                             </div>
                             <div class="col-lg-6">
                                 <div class="newsletter-form">
-                                    <form class="d-flex gap-3">
+                                    <form class="d-flex gap-3 flex-wrap">
                                         <input type="email" class="form-control form-control-lg border-0"
                                             placeholder="Ingresa tu correo electrónico">
-                                        <button class="btn btn-primary btn-lg" type="submit">Suscribirse</button>
+                                        <button class="btn btn-light btn-lg" type="submit"
+                                            style="background-color: white; color: #27222C;">Suscribirse</button>
                                     </form>
                                 </div>
                             </div>
